removed local repo and moved to nexus, removed all cosmo-stuff and changed it to drinkit. Removed files related to the comso project